Updating Swagger category/import and post specification route
